adjust shipping code

--- a/static/style.css
+++ b/static/style.css
@@ -137,15 +137,20 @@
 }
 
 @media screen and (min-width: 320px) and (max-width: 720px) {
-  /* .Carrinho {
-    margin: 0 15px !important;
-    padding: 0 17px !important;
-  } */
+  .Carrinho {
+    background: #f8f8f8;
+  }
 
   .carrinho-item {
     margin: 0 !important;
     display: flex;
     flex-direction: column;
+    margin-bottom: 10px 0;
+    background: #fff;
+  }
+
+  .Lista-De-Produtos {
+    margin: 10px 0;
   }
 
   .quantity-value {
@@ -174,25 +179,18 @@
     font-size: 15px;
   }
 
-  /* .image-title {
-    display: flex;
-    align-items: center;
-  }
-  
-  .quantity-value {
-    display: flex;
-    align-items: center;
-  } */
-
   .delivery-calculator {
     display: flex !important;
     align-items: center !important;
     justify-content: flex-start;
-    padding-left: 20px;
+    padding: 10px 20px 10px 20px;
+    margin-bottom: 10px;
+    background: #fff;
   }
 
   .delivery-container {
     display: flex !important;
+    flex-direction: column !important;
     align-items: center !important;
     margin: 0 !important;
   }
@@ -202,18 +200,22 @@
     align-items: center !important;
     justify-content: space-around !important;
 
-    background: #f8f8f8 !important;
+    background: #ffffff !important;
     height: 40px !important;
     width: 100% !important;
     padding: 0 5px !important;
   }
 
   .delivery-calculator-box p {
-    display: none;
+    padding-right: 5px;
+  }
+
+  .delivery-calculated {
+    width: 100%;
   }
 
   .delivery-calculator-box .form-input {
-    width: 140px !important;
+    /* width: 140px !important; */
     height: 30px;
   }
 
@@ -223,6 +225,7 @@
 
   .Dados-Do-Carrinho {
     padding: 0 10px !important;
+    background: #fff;
   }
 
   .Dados-Pedido-Container {
@@ -1095,7 +1098,6 @@ i.fa-star {
 
 .dados-do-carrinho-item {
   padding: 10px 0;
-  border-top: 1px solid #aaaa;
 }
 
 .Carrinho select {
